# cowrpc-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
cowrpc/: Cargo.toml  build.rs
cowrpc/src/: async_peer.rs  async_router.rs  cancel_event.rs  error.rs  lib.rs  msgpack.rs  peer.rs  proto.rs  router.rs  transport.rs
cowrpc/src/peer/: handshake.rs  mod.rs
cowrpc/src/router/: mod.rs  router_peer.rs
cowrpc/src/transport/: adaptor.rs  async.rs  interceptor.rs  mod.rs  sync.rs  tcp.rs  tcp_listener.rs  tls.rs  uri.rs  utils.rs  websocket.rs  websocket_listener.rs
cowrpc/src/transport/async/: adaptor.rs  interceptor.rs  mod.rs  tcp.rs  tcp_listener.rs  websocket.rs  websocket_listener.rs
cowrpc/src/transport/sync/: adaptor.rs  interceptor.rs  mod.rs  tcp.rs  tcp_listener.rs  websocket.rs  websocket_listener.rs
cowrpc/tests/: direct_mode.rs  ready_event.rs  routed_mode.rs
cowrpc/tests/ifaces/: mod.rs  test_cow.rs
cowrpc_derive/: Cargo.toml
cowrpc_derive/src/: call.rs  lib.rs
cowrpc_derive/src/call/: attr.rs  derive.rs
cowrpc_derive/src/iface/: attr.rs  derive.rs  mod.rs
examples/cow-ifaces/: Cargo.toml
examples/cow-ifaces/src/: iface_cow.rs  lib.rs  test2_cow.rs  test_cow.rs
examples/direct/: .gitignore  Cargo.toml
examples/direct/src/: client.rs  server.rs
examples/router/: .gitignore  Cargo.toml
examples/router/certs/: rootCA.der  router.local.pfx
examples/router/src/: client.rs  router.rs  server.rs
