[package]
name = "cowrpc"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["François Dubois <fdubois@devolutions.net>, Richer Archambault <rarchambault@devolutions.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
byteorder = "1.2"
bufstream = "0.1.3"
rmp = "0.8.7"
#TODO FD remove
#mio = "0.6.13"
#mio-extras = "2.0"
log = "0.4.1"
env_logger = "0.8"
bytes = "0.4.4"
dns-lookup = "0.9.0"
native-tls = "0.2"
#todo fd remove
#tungstenite = "0.13"
async-tungstenite = {version = "0.13", features = ["tokio-runtime"]}
timer = "0.2"
time = "0.1"
url = "1.7"
rand = "0.4"
mouscache = "^0.5.4"
mouscache_derive = "0.4"
futures_01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3", features = ["compat"] }
pin-utils = "0.1"
parking_lot = "0.6"
tokio = { version = "0.2.25", features = ["full", "sync"] }
# todo fd remove
#tokio-tcp = "0.1.2"
tls-api = { git = "https://github.com/devolutions/rust-tls-api", branch = "wayk" }
tls-api-native-tls = { git = "https://github.com/devolutions/rust-tls-api", branch = "wayk" }

[dev-dependencies]
cowrpc_derive = {path = "../cowrpc_derive"}