[package]
name = "cowrpc"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["François Dubois <fdubois@devolutions.net>, Richer Archambault <rarchambault@devolutions.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
byteorder = "1.2"
bufstream = "0.1.3"
rmp = "0.8.7"
log = "0.4.1"
env_logger = "0.8"
bytes = "0.4.4"
dns-lookup = "0.9.0"
native-tls = "0.2"
async-tungstenite = {version = "0.9", features = ["tokio-runtime"]}
timer = "0.2"
time = "0.1"
url = "1.7"
rand = "0.4"
mouscache = "^0.5.4"
mouscache_derive = "0.4"
futures = { version = "0.3", features = ["compat"] }
pin-utils = "0.1"
parking_lot = "0.6"
tokio = { version = "0.2", features = ["full"] }
tls-api = { git = "https://github.com/devolutions/rust-tls-api", branch = "wayk" }
tls-api-native-tls = { git = "https://github.com/devolutions/rust-tls-api", branch = "wayk" }