[package]
name = "cowrpc"
version = "0.5.0"
license = "MIT/Apache-2.0"
authors = ["François Dubois <fdubois@devolutions.net>, Richer Archambault <rarchambault@devolutions.net>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
byteorder = "1.4"
bufstream = "0.1"
bytes = "1.0"
url = "2.2"
mouscache = "0.5"
mouscache_derive = "0.4"
rand = "0.8"
parking_lot = "0.11"

slog = "2.7"
slog-stdlog = "4.1"

futures = "0.3"
async-tungstenite = {version = "0.9", features = ["tokio-runtime", "tokio-rustls"]}
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.14"