[package]
name = "cowrpc-direct-example"
version = "0.1.0"
authors = ["François Dubois <fdubois@devolutions.net>"]

[dependencies]
rmp = "0.8.7"
log = "0.4.1"
env_logger = "0.5.3"

[dependencies.cowrpc]
path = "../../cowrpc"

[dependencies.cow-ifaces]
path = "../cow-ifaces"

[[example]]
name = "client_direct"
path = "src/client.rs"

[[example]]
name = "server_direct"
path = "src/server.rs"